# polyakov_mikhail_course_work_4

./: .gitignore  README.md  config.py  main.py  pyproject.toml
data/: vacancies.json
src/: API_HH.py  functions.py  vacancy.py  vacancy_json.py
test/: test_API_HH.py  test_vacancy.py  test_vacancy_json.py
